Versuchsdurchführung plus Fragestunde

--- a/physik_praktikum/Versuch3_StatistikI_Würfel_Studenten_Version/Versuch3_StatistikI_Würfel_Finn_Wagner.ipynb
+++ b/physik_praktikum/Versuch3_StatistikI_Würfel_Studenten_Version/Versuch3_StatistikI_Würfel_Finn_Wagner.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "2fff0484",
    "metadata": {},
    "outputs": [],
@@ -232,6 +232,7 @@
     "print(dice1, dice2, dice3)\n",
     "\n",
     "\"\"\"\n",
+    "TODO Alles 3 mal ausführen\n",
     "Ergebenise der Zufallsexperimente TODO MINDESTENS DREIMAL AUSFÜHREN\n",
     "100 Würfe:\n",
     "    Arithmetisches Mittel:  10.54 \n",
@@ -283,6 +284,7 @@
     "\n",
     "? #Auswertung Mittelwert für 100 Würfe\n",
     "\"\"\"\n",
+    "TODO Alles 3 mal ausführen\n",
     "Der Mittelwert (Arithmetisches Mittel) ist mit 10.54 eine gute Aproximation des berechneten Werts von 10.5.\n",
     "Der eperimentele Wert ist auf eine Nachkommastelle genau mit einer Abweichung von 0.04 (abs(10.5-10.54))\n",
     "\n",
@@ -385,6 +387,7 @@
     "µ = (v_1 + v_2 + v_3)/3\n",
     "σ = np.sqrt((v_1-µ)**2+(v_2-µ)**2+(v_3-µ)**2)\n",
     "\n",
+    "TODO Alles 3 mal ausführen\n",
     "? #Auswertung Standardabweichung für 100 Würfe\n",
     "v_1 = dice(n=100, m=1, k=20)[1]\n",
     "v_2 = dice(n=100, m=1, k=20)[1]\n",
@@ -448,6 +451,7 @@
     "print(dice4, dice5, dice6)\n",
     "\n",
     "\"\"\"\n",
+    "TODO Alles 3 mal ausführen\n",
     "Ergebenise der Zufallsexperimente:\n",
     " \n",
     "2 Würfel:\n",
@@ -656,6 +660,8 @@
     "Dabei wird eine Gaußfunktion als theoretische Funktion verwendet. Vergleichen sie die 𝜒2 Werte.\n",
     "Welcher Wert ist besonders hoch/gering und woran könnte das liegen? \n",
     "\n",
+    "f) nähert sich gausfunktion grenwert\n",
+    "\n",
     "Ergebenise der Zufallsexperimente:\n",
     " \n",
     "2 Würfel:\n",
@@ -671,6 +677,7 @@
     "    Empirische Standardabweichung:  18.34285430351558\n",
     "\"\"\"\n",
     "\n",
+    "Hier die theoretischen Wert für dn Fit einsetzen aus der b) damit der Fit am besten passt.\n",
     "chi_squared(dice4, sigma = 7.998500859536117, mu=21.228)\n",
     "chi_squared(dice5, sigma = 12.966268507168898, mu=52.391)\n",
     "chi_squared(dice6, sigma = 18.34285430351558, mu=104.764)\n",
@@ -755,7 +762,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
