--- a/physik_praktikum/versuch5/versuch5.tex
+++ b/physik_praktikum/versuch5/versuch5.tex
@@ -8,6 +8,9 @@
 \usepackage{enumitem}
 \usepackage{amsmath}
 \usepackage{hyperref}
+
+\usepackage{siunitx}
+
 \newcommand{\proofeq}{\overset{!}{=}}
 \newcommand{\proofeqv}{\overset{!}{\Leftrightarrow}}
 \newcommand{\equivalent}{\overset{\scriptscriptstyle\wedge}{=}}
@@ -55,6 +58,44 @@
 
     TODO: SCHEMATIK EINFÜGEN PFEILLÄNGEN ÄNDERN
 
+    \section{Durchführung}
+
+    Luftballon auf Flasche gestüllpt und dann Flasche geschütelt.
+    Wiederholtes schütteln. (Wasser in Ballon?)
+    Zweiten Luftballon aufgepustet, sodass er gleich groß
+    Gekennzeichnet
+    Fallen gelassen von Unterkante des Türrahmens
+    
+    \section{Auswertung}
+    Umfänge mitteln zu von \(a_1 = \SI{0.475}{m} und a_2 = \SI{0.477}{m} \)
+    \(a = \SI{0.476}{m} \) und \(b = \SI{0.45}{m} \)
+    Umfänge mitteln \( \frac{ \SI{0.476}{m} + \SI{0.45}{m} }{2} = \SI{0.463}{m} \)
+
+    Volumen ausrechnen:
+    \begin{equation} \label{eq:volumen}
+        V = \frac{4}{3} \pi {\left( \frac{U}{2 \pi} \right) }^3 = \frac{4}{3} \pi \frac{U^3}{8 \pi^3} = \frac{1}{6} \frac{U^3}{\pi^2}
+    \end{equation} % kopiert aus 6
+    Eingesetzt und ausgerechnet:
+    \( \SI{1.676 * 10^{-3} }{m^3} \)
+
+    Dann Zeiten einsetzen:
+
+    rho luft aus 5.4
+    \begin{equation}
+        \rho_{CO_2} = \SI{1.2041}{\frac{kg}{m^3}} + (\frac{t_{Luft}}{t_{CO_2}} - 1)+\frac{m_H}{V}
+    \end{equation}
+    Berechnen Sie aus den drei Messungen die Mittelwerte und setzen sie ein.
+
+    Formel mit Volumenformel eingesetzt
+    Ergebnis \(\)
+
+    TODO: Prozent abweichung vom Literaturwert
+
+    TODO: Fehler Luftballon wiegt 2g
+    TODO: Wie viel Co2 in Waserflasche gelöst.
+    TODO: Fehler Luft im Co2 ballon
+    TODO: Schwer zu sehen wann Boden berührt
+    TODO:Literaturwert Quelle angeben
 
     \section{Quellen}
     \url{https://de.wikipedia.org/wiki/Gesetz_von_Stokes}
