--- a/physik_praktikum/versuch5/versuch5.tex
+++ b/physik_praktikum/versuch5/versuch5.tex
@@ -41,16 +41,13 @@
     1. Die Schwerkraft beschleunigt den Luftballon nach unten mit
     \[ F_G = mg = \rho_K V g \]
     Wo wir hier die Masse des Luftballons durch seine Dichte mal sein Volumen ersetzen \( m = \rho_K V \)
-    TODO COMPLETE
-
-    TODO: Video aufgenommen ausgewertet mit Media Player Classic ausgewertet
-    TODO: Beachten Vidoe nur mit 30fps aufgenommen Fehlerrechnung
+    TODO: COMPLETE
 
     \section{Versuchsaufbau}
         \subsection{Material}
         \begin{itemize}
             \item 2 Luftballons
-            \item 1 Flasche Mineralwasser Classic
+            \item 1 Flasche Mineralwasser Classic; Wasser mit viel Kohlensäure
             \item Smartphone zum Aufnehmen eines Videos
             \item 1 Maßband
             \item 1 Stoppuhr
@@ -65,42 +62,64 @@
     Zweiten Luftballon aufgepustet, sodass er gleich groß
     Gekennzeichnet
     Fallen gelassen von Unterkante des Türrahmens
+    Aufgezeichnet mit Handykamera. Aufzeichung vorher gestartet, weiter weg gestellt, damit alles drauf TODO: Bild Versuch einfügen
+    Wir haben den Versuch dreimal durchgeführt und jedes mal ein Video aufgenommen.
+    TODO: Bilder, 1.Ballon auf Flasche, 2.Ballon auf Flasche geschüttelt, 3. Fallversuch
     
     \section{Auswertung}
-    Umfänge mitteln zu von \(a_1 = \SI{0.475}{m} und a_2 = \SI{0.477}{m} \)
-    \(a = \SI{0.476}{m} \) und \(b = \SI{0.45}{m} \)
-    Umfänge mitteln \( \frac{ \SI{0.476}{m} + \SI{0.45}{m} }{2} = \SI{0.463}{m} \)
+        Umfänge mitteln zu von \(a_1 = \SI{0.475}{m} und a_2 = \SI{0.477}{m} \)
+        \(a = \SI{0.476}{m} \) und \(b = \SI{0.45}{m} \)
+        Umfänge mitteln \( \frac{ \SI{0.476}{m} + \SI{0.45}{m} }{2} = \SI{0.463}{m} \)
 
-    Volumen ausrechnen:
-    \begin{equation} \label{eq:volumen}
-        V = \frac{4}{3} \pi {\left( \frac{U}{2 \pi} \right) }^3 = \frac{4}{3} \pi \frac{U^3}{8 \pi^3} = \frac{1}{6} \frac{U^3}{\pi^2}
-    \end{equation} % kopiert aus 6
-    Eingesetzt und ausgerechnet:
-    \( \SI{1.676 * 10^{-3} }{m^3} \)
+        Volumen ausrechnen:
+        \begin{equation} \label{eq:volumen}
+            V = \frac{4}{3} \pi {\left( \frac{U}{2 \pi} \right) }^3 = \frac{4}{3} \pi \frac{U^3}{8 \pi^3} = \frac{1}{6} \frac{U^3}{\pi^2}
+        \end{equation} % kopiert aus 6
+        Eingesetzt und ausgerechnet:
+        \( \SI{1.676 * 10^{-3} }{m^3} \)
 
-    Dann Zeiten einsetzen:
+        Dann Zeiten einsetzen:
 
-    rho luft aus 5.4
-    \begin{equation}
-        \rho_{CO_2} = \SI{1.2041}{\frac{kg}{m^3}} + (\frac{t_{Luft}}{t_{CO_2}} - 1)+\frac{m_H}{V}
-    \end{equation}
-    Berechnen Sie aus den drei Messungen die Mittelwerte und setzen sie ein.
+        rho luft aus 5.4
+        \begin{equation}
+            \rho_{CO_2} = \SI{1.2041}{\frac{kg}{m^3}} + (\frac{t_{Luft}}{t_{CO_2}} - 1)+\frac{m_H}{V}
+        \end{equation}
+        Berechnen Sie aus den drei Messungen die Mittelwerte und setzen sie ein.
 
-    Formel mit Volumenformel eingesetzt
-    Ergebnis \(\)
+        Formel mit Volumenformel eingesetzt
+        Ergebnis \(\)
+    TODO: Trennen Formeln und Auswertung
+
+    \section{Fehlerrechnung}
+        Prallaxe von Video???
+        Nicht auf gleiche Höhe am Anfang.
+        Luftstömungen?
+        
+        TODO: Fehler Luft im Co2 ballon, alternativ Sodastream?
+        TODO: Schwer zu sehen wann Boden berührt
+        TODO: Fehler Luftballon wiegt 2g
+        TODO: Video aufgenommen ausgewertet mit Media Player Classic ausgewertet
+        TODO: Beachten Vidoe nur mit 30fps aufgenommen Fehlerrechnung
+        TODO: Umfangfehlerrechnung aus Versuch 6 klauen. Hier aber mehr auf schwierig Umfänge zu vergleichen eingehen. Volumenfehler
+        TODO: Theoriefehler aus Herleitung???
+
+
+    TODO: Plot, ort, zeit geschwindigkeit des Luftballons beim Fall?
+    TODO: Lösung DGL aus Methoden einbeziehen?
 
     TODO: Prozent abweichung vom Literaturwert
 
-    TODO: Fehler Luftballon wiegt 2g
     TODO: Wie viel Co2 in Waserflasche gelöst.
-    TODO: Fehler Luft im Co2 ballon
-    TODO: Schwer zu sehen wann Boden berührt
     TODO:Literaturwert Quelle angeben
 
     \section{Quellen}
-    \url{https://de.wikipedia.org/wiki/Gesetz_von_Stokes}
-    Anleitung zum Physikalischen Grundpraktikum Teil I (Mechanik und Thermodynamik) JLU Gießen II. Physikalisches Institut Version 1.3, 28.02.2022 von Jens Sören Lange
-    https://texample.net/tikz/examples/bernoulli/
-    Luftballon Bild
+        \url{https://de.wikipedia.org/wiki/Gesetz_von_Stokes}
+        Anleitung zum Physikalischen Grundpraktikum Teil I (Mechanik und Thermodynamik) JLU Gießen II. Physikalisches Institut Version 1.3, 28.02.2022 von Jens Sören Lange
+        https://texample.net/tikz/examples/bernoulli/
+        Luftballon Bild
+        TODO: Quellen aus Versuch 6 klauen
+        TODO: Move to quellen.bib
+
+    TODO: Aufgabenstellung nochmal genau lesen.
 
 \end{document}
