--- a/physik_praktikum/versuch6/versuch6.tex
+++ b/physik_praktikum/versuch6/versuch6.tex
@@ -227,6 +227,8 @@
         TODO: Alle Größen erklären!
         TODO: Sonstiges hochladen?
 
+        TODO: Ausströmgeschwindigkeit konstant berücksichtigt???
+
         \subsection{Fehlerforpflanzung}
             Den Fehler für die berechnete Geschwindigkeit bekommen wir mithilfe der Gaußschen Fehlerfortpflanzung (0.2.1.14 aus\cite{AnleitungPraktikum})
             Wir setzen die Funktion zur Berechnung von \(v_a\)\ref{eq:calc_velocity} durch die beiden (fehlerbehafteten, D ist fehlerlos)
@@ -364,5 +366,7 @@
     \end{figure}
 
     TODO: Messungen überarbeiten und anhängen
+
+    TODO: Aufgabenstellung nochmal genau lesen.
     
 \end{document}
