--- a/physik_praktikum/versuch6/versuch6.tex
+++ b/physik_praktikum/versuch6/versuch6.tex
@@ -368,5 +368,6 @@
     TODO: Messungen überarbeiten und anhängen
 
     TODO: Aufgabenstellung nochmal genau lesen.
+    TODO: Update .gitgnore Datei mit sonstigem Output hier im Ordner
     
 \end{document}
