--- a/physik_praktikum/versuch6/versuch6.tex
+++ b/physik_praktikum/versuch6/versuch6.tex
@@ -91,7 +91,7 @@
 
     \subsection{Aufbau und Material}
     \begin{itemize}
-        \item Maßband mit mindestens Milimetergenauigkeit, am besten ein weiches Rollbandmaß
+        \item Maßband mit mindestensTODO:?->5 Milimetergenauigkeit, am besten ein weiches Rollbandmaß
         \item Stoppuhr (Genauigkeit mindestens \( \frac{1}{10}s \))
         \item Smartphone zur Videoaufnahme
     \end{itemize}
@@ -100,7 +100,7 @@
     \begin{enumerate}
         \item Bestimmen sie den Durchmesser D des Mundstückes.
         \item Blasen sie den Luftballon auf. Halten sie das Ende zu. Bestimmen Sie den Umfang mithilfe des Maßband.
-        Messen Sie den Umfang von Mundstück bis zum obersten Punkt (Umfang a), sowie den Umfang der "Tallie" (Umfang b).
+        Messen Sie den Umfang von Mundstück bis zum obersten Punkt (Umfang a), sowie den Umfang der \glqq{}Tallie\grqq{} (Umfang b) TODO:Ref Schematik.
         \item Lassen Sie die Luft aus dem Ballon ausströmen. Der Luftballon muss nicht festgehalten werden.
         Messen Sie die Zeit, in welcher die Luft aus dem Luftballon entweicht.
         Nutzen Sie die Stoppuhr oder werten sie die Zeit am Video aus. Für Videoaufnahmen empfielt es sich den Ballon festzukleben.\ref{fig:Festgeklebt}
@@ -216,7 +216,7 @@
             Person die den Ballon selber losließ war \(\approx \SI{0.2}{s} \) länger als die der anderen Messenden.
             Was sich ebenfalls auf die Reaktionszeit zurückführen lässt.
             Deutlich genauere Messwerte sind mit Hilfe von Videoanalyse zu bekommen, wobei der Messfehler hier die Framerate des Videos ist.
-            Nicht einfach zu beurteilen, ist aber auch hier, wann der Ballon wirklich ''leer'' ist. Was das Ergebnis weiter verfälscht.
+            Nicht einfach zu beurteilen, ist aber auch hier, wann der Ballon wirklich \glqq{}leer\grqq{} ist. Was das Ergebnis weiter verfälscht.
 
             Nach eingien weiteren Experimenten mit dem Luftballon zeigte sich außerdem das die Spannkraft nachließ und das Volumen
             nicht zu seiner Ausgangsgröße zurückkehrte, sich also der Innendruck des Luftballons änderte.
